--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                  <span class="navbar-toggler-icon"></span>
              </button>
-             <a href="#" class="navbar-brand ml-auto">Ristorante Con Fusion</a>
+             <a href="#" class="navbar-brand mr-auto">Ristorante Con Fusion</a>
              <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a href="#" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a href="./aboutus.html" class="nav-link"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a></li>
