--- a/aboutus.html
+++ b/aboutus.html
@@ -107,7 +107,7 @@
 
                     <div class="card">
                         <div class="card-header" id="peterhead" role="tab">
-                            <h3 class="mb-0"><a data-toggle="collapse" data-target="#peter">Peter Pan <small>Chief Epicurious Officer</small></a></h3>
+                            <h3 class="mb-0"><a class="collapsed" data-toggle="collapse" data-target="#peter">Peter Pan <small>Chief Epicurious Officer</small></a></h3>
                         </div>
 
                         <div class="collapse show" data-parent="#accordion" role="tabpanel" id="peter">
@@ -119,7 +119,7 @@
 
                     <div class="card">
                         <div class="card-header" id="peterhead" role="tab">
-                            <h3 class="mb-0"><a data-toggle="collapse" data-target="#danny">Dhanasekaran Witherspoon <small>Chief Food Officer</small></a></h3>
+                            <h3 class="mb-0"><a class="collapsed" data-toggle="collapse" data-target="#danny">Dhanasekaran Witherspoon <small>Chief Food Officer</small></a></h3>
                         </div>
 
                         <div class="collapse" data-parent="#accordion" role="tabpanel" id="danny">
@@ -131,7 +131,7 @@
 
                     <div class="card">
                         <div class="card-header" id="peterhead" role="tab">
-                            <h3 class="mb-0"><a data-toggle="collapse" data-target="#agumbe">Agumbe Tang <small>Chief Taste Officer</small></a></h3>
+                            <h3 class="mb-0"><a class="collapsed" data-toggle="collapse" data-target="#agumbe">Agumbe Tang <small>Chief Taste Officer</small></a></h3>
                         </div>
 
                         <div class="collapse" data-parent="#accordion" role="tabpanel" id="agumbe">
@@ -143,7 +143,7 @@
 
                     <div class="card">
                         <div class="card-header" id="peterhead" role="tab">
-                            <h3 class="mb-0"><a data-toggle="collapse" data-target="#alberto">Alberto Somayya <small>Executive Chef</small></a></h3>
+                            <h3 class="mb-0"><a class="collapsed" data-toggle="collapse" data-target="#alberto">Alberto Somayya <small>Executive Chef</small></a></h3>
                         </div>
 
                         <div class="collapse" data-parent="#accordion" role="tabpanel" id="alberto">
