--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <a class="btn btn-warning btn-block text-black" href="#reservation" data-toggle="tooltip"
-                        data-html="true" title="Or Call Us <br><strong>+917014919708</strong>"
-                        data-placement="bottom">Reserve a Table</a>
+                    <a class="btn btn-warning btn-block text-black" href="" data-toggle="modal" data-target="#reservationModal">Reserve a Table</a>
                 </div>
             </div>
         </div>
@@ -215,59 +213,72 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row row-content" id="reservation">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <label class="col-12 col-sm-2">Number of Guests</label>
-                                <div class="col">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="one_guest_radio" value="one">
-                                        <label class="form-check-label" for="one_guest_radio">1</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="two_guest_radio" value="two">
-                                        <label class="form-check-label" for="two_guest_radio">2</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="three_guest_radio" value="three">
-                                        <label class="form-check-label" for="three_guest_radio">3</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="four_guest_radio" value="four">
-                                        <label class="form-check-label" for="four_guest_radio">4</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="six_guest_radio" value="six">
-                                        <label class="form-check-label" for="six_guest_radio">6</label>
-                                    </div>
+    <div class="modal fade" id="reservationModal" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Reserve a Table</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2">Number of Guests</label>
+                            <div class="col">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="one_guest_radio" value="one">
+                                    <label class="form-check-label" for="one_guest_radio">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="two_guest_radio" value="two">
+                                    <label class="form-check-label" for="two_guest_radio">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="three_guest_radio" value="three">
+                                    <label class="form-check-label" for="three_guest_radio">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="four_guest_radio" value="four">
+                                    <label class="form-check-label" for="four_guest_radio">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                        id="six_guest_radio" value="six">
+                                    <label class="form-check-label" for="six_guest_radio">6</label>
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <label class="col-12 col-sm-2">Date and Time</label>
-                                <div class="col-12 col-sm-4">
-                                    <input type="date" class="form-control" id="date">
-                                </div>
-                                <div class="col-12 col-sm-4">
-                                    <input type="time" class="form-control" id="time">
-                                </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2">Section</label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                  <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
                             </div>
-                            <div class="form-group row">
-                                <div class="col offset-0 offset-sm-2">
-                                    <button type="submit" class="btn btn-primary">Reserve</button>
-                                </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-2">Date and Time</label>
+                            <div class="col-12 col-sm-4">
+                                <input type="date" class="form-control" id="date">
                             </div>
-                        </form>
-                    </div>
+                            <div class="col-12 col-sm-4">
+                                <input type="time" class="form-control" id="time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col offset-0 offset-sm-2">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -322,11 +333,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
